# Abstract_and_Method_Factory_Concept

./: CMakeLists.txt  README.md
inc/: computerFactory.h  linuxType.h  macos.h
inc/builder/: builder.h  computerB.h  director.h  linuxBuilder.h  macBuilder.h  windowsBuilder.h
inc/factory/: computer.h  linux.h  macosType.h  windows.h  windowsType.h
inc/prototype/: RegistryPrototype.h  computerP.h  linuxPrototype.h  macPrototype.h  winPrototype.h
inc/singleton/: database.h
src/: computer.cpp  macos.cpp  main.cpp
src/builder/: computerB.cpp  director.cpp  linuxBuilder.cpp  macBuilder.cpp  windowsBuilder.cpp
src/factory/: linux.cpp  linuxType.cpp  macosType.cpp  windows.cpp  windowsType.cpp
src/prototype/: RegistryPrototype.cpp  computerP.cpp  linuxPrototype.cpp  macPrototype.cpp  winPrototype.cpp
src/singleton/: database.cpp
